--- a/trunk/appinfo.json
+++ b/trunk/appinfo.json
@@ -1,5 +1,5 @@
 {
-	"id": "com.ampache.ampachemobile",
+	"id": "com.palm.ampachemobile",
 	"version": "0.0.4",
 	"vendor": "Ampache",
 	"type": "web",
