* Got headphone events to work (had to change app name to start with com.palm for it to actually work)

--- a/appinfo.json
+++ b/appinfo.json
@@ -1,5 +1,5 @@
 {
-	"id": "com.ampache.ampachemobile",
+	"id": "com.palm.ampachemobile",
 	"version": "0.0.4",
 	"vendor": "Ampache",
 	"type": "web",
