--- a/appinfo.json
+++ b/appinfo.json
@@ -1,10 +1,12 @@
 {
 	"id": "com.palm.ampachemobile",
-	"version": "0.5.0",
-	"vendor": "Ampache",
-	"type": "web",
+	"version": "0.5.1",
+	"vendor": "Ampache Mobile Project",
+    "keywords": ["Audio", "Music", "Songs"],
+    "type": "web",
 	"main": "index.html",
 	"title": "Ampache Mobile",
 	"icon": "icon.png",
 	"theme": "palm-dark"
+    
 }
