--- a/src/appinfo.json
+++ b/src/appinfo.json
@@ -1,12 +1,11 @@
 {
     "id": "com.palm.ampachemobile",
-    "version": "0.6.1",
+    "version": "0.7.0",
     "vendor": "Ampache Mobile Project",
     "keywords": ["Audio", "Music", "Songs"],
     "type": "web",
     "main": "index.html",
     "title": "Ampache Mobile",
     "icon": "icon.png",
-    "theme": "palm-dark"
-    
+    "theme": "dark"
 }
