--- a/trunk/src/appinfo.json
+++ b/trunk/src/appinfo.json
@@ -11,5 +11,7 @@
   "theme":"dark",
   "noWindow":false,
   "noDeprecatedStyles":true,
+  "splashicon": "icon-256x256.png",
+  "splashBackground": "images/splash-ampache-mobile.png",  
   "keywords": ["Audio", "Music", "Songs"]
 }
