[Feature] Splash, New splash loading image * jsLint fixes [Update] New application name, no longer using com.palm

--- a/src/appinfo.json
+++ b/src/appinfo.json
@@ -1,5 +1,5 @@
 {
-  "id":"com.palm.ampachemobile",
+  "id":"com.ampachemobile",
   "version":"0.8.0",
   "title":"Ampache Mobile",
   "vendor":"Ampache Mobile Project",
