--- a/trunk/src/appinfo.json
+++ b/trunk/src/appinfo.json
@@ -1,5 +1,5 @@
 {
-  "id":"com.palm.ampachemobile",
+  "id":"com.ampachemobile",
   "version":"0.8.0",
   "title":"Ampache Mobile",
   "vendor":"Ampache Mobile Project",
