--- a/branches/v0_8_6_Audio_Redesign/src/appinfo.json
+++ b/branches/v0_8_6_Audio_Redesign/src/appinfo.json
@@ -1,7 +1,7 @@
 {
-  "id": "com.ampachemobile",
-  "version": "0.8.5",
-  "title": "Ampache Mobile",
+  "id": "com.ampachemobile.beta",
+  "version": "0.8.6",
+  "title": "Ampache Mobile Beta",
   "vendor": "Ampache Mobile Project",
   "vendorurl": "http://code.google.com/p/ampache-mobile",
   "main": "index.html",
