to many changes to remember them all

--- a/branches/v0_8_6_Audio_Redesign/src/framework_config.json
+++ b/branches/v0_8_6_Audio_Redesign/src/framework_config.json
@@ -1,7 +1,7 @@
 {
   "logLevel":0,
-  "timingEnabled":false,
-  "logEvents":false,
-  "debuggingEnabled":false,
+  "timingEnabled":true,
+  "logEvents":true,
+  "debuggingEnabled":true,
   "escapeHTMLInTemplates":false
 }
