--- a/src/appinfo.json
+++ b/src/appinfo.json
@@ -1,7 +1,7 @@
 {
-  "id": "com.ampachemobile",
-  "version": "0.8.5",
-  "title": "Ampache Mobile",
+  "id": "com.ampachemobile.alpha",
+  "version": "0.9.0",
+  "title": "Ampache Mobile Alpha",
   "vendor": "Ampache Mobile Project",
   "vendorurl": "http://code.google.com/p/ampache-mobile",
   "main": "index.html",
