--- a/trunk/src/framework_config.json
+++ b/trunk/src/framework_config.json
@@ -1,7 +1,7 @@
 {
   "logLevel":0,
-  "timingEnabled":false,
-  "logEvents":false,
-  "debuggingEnabled":false,
+  "timingEnabled":true,
+  "logEvents":true,
+  "debuggingEnabled":true,
   "escapeHTMLInTemplates":false
 }
