--- a/trunk/src/appinfo.json
+++ b/trunk/src/appinfo.json
@@ -1,7 +1,7 @@
 {
   "id": "com.ampachemobile.alpha",
   "version": "0.9.0",
-  "title": "Ampache Mobile Alpha",
+  "title": "Ampache Mobile",
   "vendor": "Ampache Mobile Project",
   "vendorurl": "http://code.google.com/p/ampache-mobile",
   "main": "index.html",
