* Added Workaround for %20 issue in gstreamer.

--- a/src/appinfo.json
+++ b/src/appinfo.json
@@ -1,5 +1,5 @@
 {
-  "id": "com.ampachemobile.alpha",
+  "id": "com.ampachemobile",
   "version": "0.9.0",
   "title": "Ampache Mobile",
   "vendor": "Ampache Mobile Project",
