--- a/trunk/src/appinfo.json
+++ b/trunk/src/appinfo.json
@@ -2,7 +2,7 @@
   "id": "com.app.ampachemobile",
   "version": "0.9.1",
   "title": "Ampache Mobile",
-  "vendor": "Ampache Mobile Project",
+  "vendor": "Ampache Mobile",
   "vendorurl": "http://code.google.com/p/ampache-mobile",
   "main": "index.html",
   "icon": "icon.png",
@@ -15,11 +15,28 @@
   "splashBackground": "images/splash-ampache-mobile.png",
   "copyright": "Copyright 2009-2010 Bryce Geiser",
   "support": {
-    "email": {
-      "address": "ampache-mobile@googlegroups.com",
-      "subject": "Support"
-    },
+    
     "resources": [
+    {
+      "type": "scene",
+      "label": "The Basics",
+      "sceneName":"the-basics"
+    },
+    {
+      "type": "scene",
+      "label": "User Guide",
+      "sceneName":"new-users"
+    },
+    {
+      "type": "web",
+      "label": "Donate",
+      "url": "https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=RZKZ3GCDQUWY8&lc=US&item_name=Ampache%20Mobile&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHosted"
+    },
+    {
+      "type": "web",
+      "label": "Check for Updates",
+      "url": "http://developer.palm.com/appredirect/?packageid=com.app.ampachemobile"
+    },
     {
       "type": "web",
       "label": "Common Issues",
@@ -27,7 +44,7 @@
     },
     {
       "type": "web",
-      "label": "Discussion Forums",
+      "label": "Support Forum",
       "url": "http://forums.precentral.net/homebrew-apps/200423-ampache-mobile.html"
     }
     ]
