--- a/src/appinfo.json
+++ b/src/appinfo.json
@@ -28,6 +28,11 @@
       "sceneName":"new-users"
     },
     {
+      "type": "scene",
+      "label": "Release Notes",
+      "sceneName":"whatsnew"
+    },
+    {
       "type": "web",
       "label": "Donate",
       "url": "https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=RZKZ3GCDQUWY8&lc=US&item_name=Ampache%20Mobile&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHosted"
