Feature: Dashboard Controls Bug Fix: Filtering songs and albums caused overlapping text

--- a/src/appinfo.json
+++ b/src/appinfo.json
@@ -1,12 +1,12 @@
 {
   "id": "com.app.ampachemobile",
-  "version": "0.9.5",
+  "version": "0.9.6",
   "title": "Ampache Mobile",
   "vendor": "Ampache Mobile",
   "vendorurl": "http://code.google.com/p/ampache-mobile",
   "main": "index.html",
   "icon": "icon.png",
-  "smallicon": "miniicon.png",
+  "miniicon": "miniicon.png",
   "type": "web",
   "theme": "dark",
   "noWindow": false,
