--- a/trunk/src/appinfo.json
+++ b/trunk/src/appinfo.json
@@ -7,6 +7,7 @@
   "main": "index.html",
   "icon": "icon.png",
   "miniicon": "miniicon.png",
+  "smallicon": "smallicon.png",
   "type": "web",
   "theme": "dark",
   "noWindow": false,
